# grounded-claim-verifier

./: LICENSE  README.md  pyproject.toml
src/grounded_claim_verifier/: __init__.py  cli.py  extractor.py  verifier.py
src/grounded_claim_verifier/providers/: __init__.py  base.py  database.py  jsonl.py
tests/: test_cli.py  test_extractor.py  test_providers.py  test_verifier.py
tests/fixtures/: qa_records.jsonl  sources.jsonl
